--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </tr>
 
         <tr>
-            <td>João</td>
+            <td>João carlos</td>
             <td>25</td>
             <td>Sou estudante</td>
         </tr>
@@ -37,7 +37,7 @@
         </tr>
 
         <tr>
-            <td>Lucas</td>
+            <td>Lucas motta</td>
             <td>27</td>
             <td>Cozinheiro</td>
         </tr>
